# SpringCompressor

./: .clang-format  .gitignore  .gitmodules  1_build_conan.sh  CLAUDE.md  CMakeLists.txt  clang_warnings.cmake  conanfile.txt
docs/: notes.txt  unused_code.txt
matlab/: .gitignore  AsymmetricCritDampLPF.m  band_limited_waveform.m  compr_profiler_consts.m  compr_profiler_gen.m  compr_profiler_use.m  connect_mids_between_extrema.m  convert_statevartpt2_state.m  critdamplp.m  critdamplp2.m  differentiator.m  filter_lr_split.m  filter_statevartpt2.m  filter_tpt1.m  freq_transfer.m  harmonic_bins_base0.m  lagrange_diff.m  p1.m  p2.m  p3.m  p3_tkop.m  p4.m  p5_gain_filter.m  p6_ssl_sim.m  p7_modulation_tests.m  p8_mod_signal_to_thicken.m  p9_soft_knee_curve.m  possible_Ms.m  possible_ks.m  q1_test_signal.m  q2_rms_detector_high_pass_stack.m  q3_rms_detector_experiments.m  q4_test_sine_ssl.m  q5_linkwitz_riley_how_to.m  q6_time_constant.m  q7_inharmonic_dist.m  q8_inharmonic_test.m  q9_sideeffect.m  qa_hilbert.m  qb_hilbertfilter.m  (+24 more)
matlab/+dfilter/: Interface.m  StateVarTPT.m  TF.m  TPT1.m  butter.m  critdamplp.m
matlab/sum_track_envelopes/: H_sect.m  collect_tracks.m  fit_line.m  fit_line_l1.m  fit_v_line.m  hiir.m  iir_multipler_for_exp_input.m  mix_power.m  mix_tracks.m  multiwindow_power_filter.m  power_envelope.m  shift_centered_window_for_fft.m  z00_test_power_envelope.m  z01_test_power_envelope_multiwindow.m  z02_test_fit_v_line.m  z03_iir_hilbert.m  z04_detect_slope_iir.m  z05_fft_orthogonal_windows.m
src/: CMakeLists.txt
src/CompressorProbe/: AnalyzerScope.cpp  AnalyzerScope.h  CMakeLists.txt  Command.cpp  Command.h  CommonState.h  CompressorProbeEditor.cpp  CompressorProbeEditor.h  CompressorProbeMessageThreadState.cpp  CompressorProbeMessageThreadState.h  CompressorProbeProcessor.cpp  CompressorProbeProcessor.h  CompressorProbeThreadSafeState.cpp  CompressorProbeThreadSafeState.h  DecibelCyclePanel.cpp  DecibelCyclePanel.h  EnvelopeFilterPanel.cpp  EnvelopeFilterPanel.h  GeneratorAlgorithms.h  GeneratorRole.cpp  GeneratorRole.h  GeneratorStatus.h  Modes.cpp  Modes.h  ParameterID.h  ProbeProtocol.h  ProbeRole.cpp  ProbeRole.h  ProbeRoleState.cpp  ProbeRoleState.h  ProcessorInterface.h  RatioByFreqPanel.h  Role.h  RoleInterface.h  WaveScope.cpp  WaveScope.h  apvts.cpp  apvts.h  config.h  pipes.cpp  (+3 more)
src/engine/: Biquad_TD2.h  CMakeLists.txt  EnvelopeFilter.cpp  EnvelopeFilter.h  FilterBank.cpp  FilterBank.h  FilterBankBandPass2.cpp  FilterBankBandPass2.h  FirstOrderIIR_TD2.h  RecursiveCrossoverRMSDetector.cpp  RecursiveCrossoverRMSDetector.h  RmsDetector.cpp  RmsDetector.h  SpringLowPass.cpp  SpringLowPass.h  StateVariableTPTFilter.cpp  StateVariableTPTFilter.h  TransferCurve.cpp  TransferCurve.h  engine.cpp  engine.h  engine_util.cpp  engine_util.h  generate_scope_data.cpp  generate_scope_data.h  pch.h
src/juce_util/: AudioProcessorWithDefaults.cpp  AudioProcessorWithDefaults.h  CMakeLists.txt  JuceTimer.cpp  logging.cpp  logging.h  misc.cpp  misc.h
src/plugin/: CMakeLists.txt  JuceTimer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeComponent.cpp  ScopeComponent.h  SpringCompressorEditor.cpp  SpringCompressorEditor.h  SpringCompressorProcessor.cpp  SpringCompressorProcessor.h  TransferCurveComponent.cpp  TransferCurveComponent.h  util.cpp  util.h
src/selfmod_engine/: CMakeLists.txt  SelfModEngine.cpp  SelfModEngine.h
src/selfmod_plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/testing/: CMakeLists.txt  EngineTest.cpp  EnvelopeFilterTest.cpp  FilterBankBandPass2Test.cpp  GenerateScopeDataTest.cpp  RecursiveCrossoverRMSDetectorTest.cpp  RmsDetectorTest.cpp  SpringLowPassTest.cpp  TransferCurveTest.cpp  engine_util_test.cpp
